--- a/shoes_back_spring/src/main/resources/templates/index.html
+++ b/shoes_back_spring/src/main/resources/templates/index.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>파일 보내기 예제</title>
-</head>
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<head th:replace="fragments.html :: head"></head>
 <body>
-<form name="form" method="post" action="/upload" enctype="multipart/form-data">
 
-    <input type="file" name="file"/>
-    <input type="submit" id="submit" value="전송"/>
-</form>
+<div class="conatiner">
+    <div class="row justify-content-center" style="margin-top: 200px">
+        <form name="form" method="post" action="/upload" enctype="multipart/form-data">
+
+            <input type="file" name="file"/>
+            <input type="submit" id="submit" value="전송"/>
+        </form>
+    </div>
+
+</div>
+
+
 </body>
 </html>
