--- a/shoes_back_spring/src/main/resources/templates/output.html
+++ b/shoes_back_spring/src/main/resources/templates/output.html
@@ -12,17 +12,24 @@
 
 
             <div class="col-4">
-                <img th:src="${first_image}" width="300px" height="300px">
+
+                <img th:onclick="imageClick([[${first_brand}]]);" th:src="${first_image}" width="300px" height="300px">
+
+
                 <h6 class="m-3" th:text="${first_brand}"></h6>
             </div>
 
             <div class="col-4">
-                <img th:src="${second_image}" width="300px" height="300px">
+
+                <img  th:onclick="imageClick([[${second_brand}]]);" th:src="${second_image}" width="300px" height="300px">
+
                 <h6 class="m-3" th:text="${second_brand}"></h6>
             </div>
 
             <div class="col-4">
-                <img th:src="${third_image}"width="300px" height="300px">
+
+                <img  th:onclick="imageClick([[${third_brand}]]);" th:src="${third_image}" width="300px" height="300px">
+
                 <h6 class="m-3" th:text="${third_brand}"></h6>
             </div>
         </div>
@@ -35,5 +42,12 @@
 
     </div>
 </body>
+
+<script>
+    function imageClick(shoesName){
+        location.href='https://www.google.com/search?q=' + shoesName+'&hl=ko&tbm=isch';
+    }
+</script>
+
 
 </html>
