--- a/shoes_back_spring/src/main/resources/templates/output.html
+++ b/shoes_back_spring/src/main/resources/templates/output.html
@@ -13,12 +13,7 @@
 
             <div class="col-4">
 
-<!--                <img th:onclick="imageClick([[${first_brand}]]);" th:src="${first_image}" width="300px" height="300px">-->
-
-                <a th:href="@{/shoes/{shoesName}(shoesName=${first_brand})}" >
-                    <img  th:src="${first_image}" width="300px" height="300px">
-                </a>
-
+                <img th:onclick="imageClick([[${first_brand}]]);" th:src="${first_image}" width="300px" height="300px">
 
 
                 <h6 class="m-3" th:text="${first_brand}"></h6>
@@ -26,18 +21,17 @@
 
             <div class="col-4">
 
-                <a th:href="@{/shoes/{shoesName}(shoesName=${second_brand})}" >
-                    <img  th:src="${second_image}" width="300px" height="300px">
-                </a>
+
+                <img th:onclick="imageClick([[${second_brand}]]);" th:src="${first_image}" width="300px" height="300px">
+
 
                 <h6 class="m-3" th:text="${second_brand}"></h6>
             </div>
 
             <div class="col-4">
 
-                <a th:href="@{/shoes/{shoesName}(shoesName=${third_brand})}" >
-                    <img  th:src="${third_image}" width="300px" height="300px">
-                </a>
+                <img th:onclick="imageClick([[${third_brand}]]);" th:src="${first_image}" width="300px" height="300px">
+
 
                 <h6 class="m-3" th:text="${third_brand}"></h6>
             </div>
